--- a/mainapp/templates/home.html
+++ b/mainapp/templates/home.html
@@ -8,7 +8,7 @@
     <title>home</title>
 </head>
 <body>
-    <a href="/mainapp/home/"><h1 style="margin: 10px;">Movie Listings @ GV Cinema</h1></a>
+    <a href="/mainapp/home/"><h1 style="margin: 10px; color: black;">Movie Listings @ GV Cinema</h1></a>
     <div>
         <form id="searchForm">
             <input type="text" id="searchMovies" name="searchMovies" placeholder="Search Movies..">
